cabal-version:       3.0
name:                isohedron
version:             0.0.0.0
synopsis:            discord dice bot
description:         discord dice bot
license:             GPL-3.0-only
license-file:        LICENSE
author:              Itai Y. Efrat
maintainer:          Itai Y. Efrat <itai3397@gmail.com>
copyright:           2021 Itai Y. Efrat
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

common common-options
  build-depends:
    base                 >= 4.11 && < 4.16
   ,dice                 >= 0.1.0.1
   ,discord-haskell

  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable isohedron
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
